tests/specs/check/css_import/exists_and_try_uses.out
Check file:///[WILDLINE]/exists_and_try_uses.ts
TS1192 [ERROR]: Module '"file:///[WILDLINE]/app.css"' has no default export.
import test from "./app.css";
       ~~~~
    at file:///[WILDLINE]/exists_and_try_uses.ts:1:8

error: Type checking failed.
