tests/specs/check/css_import/exists_and_try_uses.ts
import test from "./app.css";

test(123);
